modify how to read the book section

--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -120,23 +120,23 @@
         تم تدوين هذا الكتاب بواسطة دفتر ملاحظات جوبتر. ووقع الإختيار على استخدام دفتر ملاحظات جوبتر لعدة أسباب من أهمها:
       </p>
       <ol class="text">
-        <li>  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق نصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخلها.</li>
+        <li>  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق النصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخلها.</li>
         <li>
            تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الأكواد واكتشاف الأخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف يمكن المتعلم من التعديل على الأكواد الموجودة داخل صفحات الكتاب واظهار نتائج التعديل الذي حصل للكود دون الحاجة الى إعادة كتابة الأكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية. </li>
         <li>
           امكانية إضافة المتعلم لملاحظاته الخاصة داخل الكتاب بشكل مباشر.</li>
       </ol>
       <p>
-        لاستخدام دفتر ملاحظات جوبتر في فتح الكتاب والتفاعل معه يجب عليك اولا تنصيبه على الجهاز الذي تعمل عليه. بعد إتمام عملية التنصيب بنجاح وتشغيل دفتر ملاحظات جوبتر سوف يتم إنشاء خادم محلي على جهاز الكمبيوتر يمكن الدخول اليه من خلال متصفح الويب  والذي بدوره يمكننا من فتح ملفات الكتاب. 
+        لزيادة فرص الاستفادة من الكتاب قمنا بعمل نسخة تفاعلية من الكتاب اونلاين والتي تقوم انت الان بقراءة كلماتها بحيث تمكنك من قراءة شروحات الكتاب والتفاعل معه والتعديل على اكواده من اي جهاز تستخدمه للارتباط بصفحات الانترنت. لكن للاسف هذه النسخة لا تسمح لك بالاحتفاظ بالتغييرات التي تعملها على الكود وتختفي بمجرد الانتقال الي صفحة ويب جديدة. 
+      </p>
+      <p>
+        لاستخدام الأمثل لفتح الكتاب والتفاعل معه يكمن في تنزيل نسخة من الكتاب من موقع القت هب وفتح هذه النسخة باستخدام دفتر ملاحظات جوبتر بعد تنصيبه على الجهاز الذي تعمل عليه. 
       </p>
       <h2>تنصيب دفتر ملاحظات جوبتر 
       </h2>
       <p>
-        تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى لاستخدام هذا الكتاب.  سوف نقتصر شرحنا هنا حول كيفية تنصيب دفتر ملاحظات جوبتر على طريقتين شائعتين. اولاهما  يعتمد على التنصيب المباشر لدفتر ملاحظات جوبتر من خلال منصب المكتبات pip بعد تنصيب بايثون على جهاز الكمبيوتر. اما الطريقة الثانية فتعتمد على تنصيب توزيعة Anaconda والتي تحتوي على دفتر ملاحظات جوبتر داخلها.</p>
-        <h3> اولاً: تنصيب دفتر ملاحظات جوبتر باستخدام  pip</h3>
-        <p>لتسهيل شرح خطوات هذه الطريقة قمنا بعمل فيديو توضيحي يمكن مشاهدته من خلال الضغط على الرابط التالي:</p>
-        <a class=text href="https://www.youtube.com/watch?v=U1WubOVB3og">اضغط هنا لمشاهدة الفيديو</a>
-        <h3>ثانياً: تنصيب توزيعة Anaconda</h3>
+        تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى لاستخدام هذا الكتاب.  سوف يقتصر شرحنا هنا حول كيفية تنصيب دفتر ملاحظات جوبتر على طريقتين شائعتين. اولاهما  يعتمد على  تنصيب توزيعة Anaconda والتي تحتوي على دفتر ملاحظات جوبتر داخلها. اما الطريقة الثانية فتعتمد على التنصيب المباشر لدفتر ملاحظات جوبتر من خلال منصب المكتبات pip بعد تنصيب بايثون على جهاز الكمبيوتر.</p>
+        <h3> اولاً: تنصيب توزيعة Anaconda</h3>
         <p>وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما أرادوا تنصيب دفتر ملاحظات جوبتر على أجهزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة.</p>
         <p>ويمكن اتباع الخطوات التالية لتنصيب توزيعة Anaconda على أنظمة التشغيل الثلاثة المشهورة (وندوز ـ ماك ـ ولينكس).</p>
         <ol class=text>
@@ -167,8 +167,17 @@
           <li>لإظهار الكتاب بالشكل الصحيح قم باختيار أول خلية في الكتاب والضغط على زر Run من قائمة الادوات في دفتر ملاحظات جوبتر كما هو موضح في الصورة أدناه:<br>
             <img class=text src="../../img/cmd4.png">
           </li>
-          <li>للتعرف على كيفية التفاعل مع الكتاب قم بفتح وقراءة ملف الدليل الارشادي لدفتر ملاحظات جوبتر الذي يأتي مع الكتاب.</li>
-        </ol>
+        </ol>   
+        <h3>ثانياً: تنصيب دفتر ملاحظات جوبتر باستخدام  pip</h3>
+        <p>لتسهيل شرح خطوات هذه الطريقة قمنا بعمل فيديو توضيحي يمكن مشاهدته من خلال الضغط على الرابط التالي:</p>
+        <a class=text href="https://www.youtube.com/watch?v=U1WubOVB3og">اضغط هنا لمشاهدة الفيديو</a> 
+         
+        <p>للتعرف على كيفية التفاعل مع الكتاب قم بفتح وقراءة ملف الدليل الارشادي لدفتر ملاحظات جوبتر الذي يأتي مع الكتاب.
+        </p>
+        
+        <div class="footer">
+
+        </div>
     </div>
     </div>
 </body>
