improving python basic section

--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -120,17 +120,19 @@
         تم تدوين هذا الكتاب بواسطة دفتر ملاحظات جوبتر. ووقع الإختيار على استخدام دفتر ملاحظات جوبتر لعدة أسباب من أهمها:
       </p>
       <ol class="text">
-        <li>  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. خلايا تنسيق النصوص Markdown تسمح بكتابة النصوص وإضافة الصور  وخلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخلها.</li>
+        <li>  دفتر ملاحظات جوبتر بيئة تفاعلية يجمع بين امكانية إضافة الشروح وكتابة الأكواد البرمجية.  فجوبتر يحتوي على نوعين من الخلايا. النوع الأول يسمى خلايا تنسيق النصوص Markdown  حيث تسمح هذه الخلايا بكتابة النصوص وإضافة الصور.  أما النوع الثاني من الخلايا تسمى خلايا كود تمسح بكتابة وتنفيذ أكواد بايثون البرمجية داخلها.</li>
         <li>
            تعلم لغات البرمجة يتطلب الكثير من التمرس على كتابة الأكواد واكتشاف الأخطاء ووجود بيئة تفاعلية مثل دفتر ملاحظات جوبتر سوف يمكن المتعلم من التعديل على الأكواد الموجودة داخل صفحات الكتاب واظهار نتائج التعديل الذي حصل للكود دون الحاجة الى إعادة كتابة الأكواد في محرر خارجي خاص كما جرت عليه العادة في كتب تعليم لغات البرمجة الورقية. </li>
         <li>
           امكانية إضافة المتعلم لملاحظاته الخاصة داخل الكتاب بشكل مباشر.</li>
       </ol>
       <p>
-        لزيادة فرص الاستفادة من الكتاب قمنا بعمل نسخة تفاعلية من الكتاب اونلاين والتي تقوم انت الان بقراءة كلماتها بحيث تمكنك من قراءة شروحات الكتاب والتفاعل معه والتعديل على اكواده من اي جهاز تستخدمه للارتباط بصفحات الانترنت. لكن للاسف هذه النسخة لا تسمح لك بالاحتفاظ بالتغييرات التي تعملها على الكود وتختفي بمجرد الانتقال الي صفحة ويب جديدة. 
+        لزيادة فرص الاستفادة من الكتاب قمنا بعمل نسخة تفاعلية من الكتاب اونلاين والتي تقوم انت الان بقراءة صفحاته بحيث تمكنك من قراءة شروحات الكتاب والتفاعل معه والتعديل على اكواده من اي جهاز يمكنه الارتباط بصفحات الانترنت. لكن للاسف هذه النسخة لا تسمح لك بالاحتفاظ بالتغييرات التي تعملها على الكود وتختفي بمجرد الانتقال الي صفحة ويب جديدة. 
       </p>
       <p>
-        لاستخدام الأمثل لفتح الكتاب والتفاعل معه يكمن في تنزيل نسخة من الكتاب من موقع القت هب وفتح هذه النسخة باستخدام دفتر ملاحظات جوبتر بعد تنصيبه على الجهاز الذي تعمل عليه. 
+        الاستخدام الأمثل لفتح الكتاب والتفاعل معه يكمن في تنزيل نسخة من الكتاب من موقع  
+        <a href="http://github.com/AhmadAlsaadi/Arabic-python-notebook/archive/refs/heads/master.zip">القت هب</a> 
+        وفتح هذه النسخة باستخدام دفتر ملاحظات جوبتر بعد تنصيبه الذي تعمل عليه. 
       </p>
       <h2>تنصيب دفتر ملاحظات جوبتر 
       </h2>
@@ -141,7 +143,7 @@
         <p>ويمكن اتباع الخطوات التالية لتنصيب توزيعة Anaconda على أنظمة التشغيل الثلاثة المشهورة (وندوز ـ ماك ـ ولينكس).</p>
         <ol class=text>
           <li>قم بزيارة موقع Anaconda  التالي:<br>
-            <a href="https://www.anaconda.com/products/distribution">اضغط هنا لزيارة الموقع</a>    
+            <a href="https://www.anaconda.com/download/success">اضغط هنا لزيارة الموقع</a>    
           </li>
           <li>قم بتحميل التوزيعة المناسبة لنظام التشغيل الذي تعمل عليه على جهازك.
           </li>
