--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -109,7 +109,7 @@
     <div>
 <h1>المبادئ الأساسية للغة بايثون</h1>
 <p>
-  بعد ان تأكدنا من ان نظام التشغيل الذي نعمل عليه يحتوي على احدى اصدارات لغة بايثون 3 يمكننا الان ان نبدأ رحلة التعلم والتى اتمنى ان تكون حافلة بالمتعة والفائدة.
+  بعد ان تأكدنا من ان نظام التشغيل الذي نعمل عليه يحتوي على احدى اصدارات لغة بايثون ذو الإصدارة الثالثة يمكننا الان ان نبدأ رحلة التعلم والتى اتمنى ان تكون حافلة بالمتعة والفائدة.
 </p>  
 <h2>أهداف الفصل</h2>
 <p>
@@ -153,7 +153,7 @@
 <br>
 خامساً: تكرار العمليات على البيانات متى ما احتاج الأمر الى ذلك والتوقف عند الحصول على النتائج المطلوبة.    
 <br> 
-لك أن تتخيل أن كل ما تشاهده اليوم من برامج كمبيوترية كبيرة ومعقدة هو نتاج عمل التعليمات التي تؤدي هذه الوظائف الخمس فقط. لذلك يمكن تعريف المبرمج على أنه كل من له درابة بقواعد كتابة التعليمات (يطلق على هذه التعليمات بشكل شائع اكواد برمجية) للغة معينة ولديه مهارة بتفكيك اي مشكلة تتطلب حلا كمبيوترياً الى تعليمات بسطية متسلسلة بشكل منطقي تقوم باداء وظائف مشابهه لتلك الوظائف الخمس السابقة.  
+لك أن تتخيل أن كل ما تشاهده اليوم من برامج كمبيوترية كبيرة ومعقدة هو نتاج عمل التعليمات التي تؤدي هذه الوظائف الخمس فقط. لذلك يمكن تعريف المبرمج على أنه كل من له درابة بقواعد كتابة التعليمات (يطلق على هذه التعليمات بشكل شائع اكواد برمجية) للغة معينة ولديه مهارة بتفكيك اي مشكلة تتطلب حلا الى تعليمات بسطية متسلسلة بشكل منطقي تقوم باداء وظائف مشابهه لتلك الوظائف الخمس السابقة.  
 </p>
 <h2>طريقة كتابة برنامج بلغة بايثون</h2>
 <p>
@@ -163,7 +163,7 @@
 <p>
   هناك عدة طرق يمكن للمبرمج ان يتخاطب بها مع مفسر بايثون ومن أهم هذه الطرق:
   </p>
-  <h3>الطريقة التفاعلية</h3>
+  <h3>اولاً: الطريقة التفاعلية</h3>
   <p>
   تتطلب الطريقة التفاعلية كتابة التعليمات في بيئة برمجية خاصة معدة لهذا الغرض والتي يشار اليها في اللغة الانجليزية بـ REPL وهي اوائل الكلمات الانجليزية Read Evaluate Print Loop والتي تعني ان هذه البيئة البرمجية تقوم بقراءة التعليمات التي يكتبها المبرمج اولا ومن ثم تقوم بتنفيذها ومن ثم تطبع النتائج على الشاشة وأحيراً ترجع مؤشر الكتابة مرة اخرى للمبرمج ليكتب تعليمات جديدة. ويمكن الدخول لبيئة بايثون التفاعلية من خلال كتابة كلمة بايثون في محث اوامر الجهاز الذي تعمل عليه كما هو موضح في الفيديو التالي:
 </p>
@@ -190,20 +190,28 @@
     استكشف النتائج التي يعرضها لك مفسر بايثون لعلك تهتدي للرموز التي يستخدمها بايثون لإجراء عملية الجمع والضرب والرفع للأس؟
   </li>
   <li>
-    قم بكتابة التعليمات السابقة في البيئة التفاعلية التالية والتي تسمى PyScript REPL. هذه البيئة التفاعلية للغة بايثون تم تصميمها للعمل في متصفح الانترنت بشكل مباشر دون الحاجة الي تنصيب مفسر بايثون على الجهاز الذي تعمل عليه.
-    <p>ادخل العملية الحسابية الأولى ومن ثم اضغط على زر التشغيل في اقصى اليمين (تأكد من استخدامك للارقام العربية 1,2,3,4,5 وليس الارقام الهندية ١,٢,٣,٤ عند كتابتك للعمليات الحسابية في البيئة التفاعلية ادناه):</p>
+    قم بكتابة التعليمات السابقة في البيئة التفاعلية التالية والتي تسمى PyScript REPL. هذه البيئة التفاعلية للغة بايثون تم تصميمها للعمل في متصفح الانترنت بشكل مباشر دون الحاجة الي تنصيب مفسر بايثون على الجهاز الذي تعمل عليه. اتبع الخطوات التالية:
+    <ol>
+      <li>
+        <p>ادخل العملية الحسابية كما هو معطى في الفقرة الاولى </p>
+      </li>
+      <li>
+        <p>اضغط على زر التشغيل في اقصى اليمين (تأكد من استخدامك للارقام العربية 1,2,3,4,5 وليس الارقام الهندية ١,٢,٣,٤ عند كتابتك للعمليات الحسابية في البيئة التفاعلية ادناه)</p>
+      </li>
+    </ol>
+    
     <div class="my-repl">
     <py-repl auto-generate="true"></py-repl>
     </div>
   </li>
 </ol>
-<h3>الطريقة التقليدية (كتابة الكود داخل ملف)</h3>
+<h3>ثانياً: الطريقة التقليدية (كتابة الكود داخل ملف)</h3>
 <p>
-  تعتمد هذه الطريقة على كتابة التعليمات او الكود البرمجي في ملف نصي ينتهي اسمه بالاحقة .py. ومن ثم يتم تشغيل هذا الملف من قبل مفسر بايثون ليقوم بقراءته وتنفيذ التعليمات الموجدة به. وتعتمد طريقة تشغيل هذا الملف بحسب نوع محرر النصوص المستخدم في تحرير و كتابة الكود البرمجي داخل الملف. فهناك محررات بسيطة مثل notepad في نظام ويندوز و gedit في نظام ماك ولينكس حيث تقتصر وظيفة هذه المحررات على كتابة الكود البرمجي داخل الملف فقط. اما عملية تشغيل الملف فتتم من خلال محرر الاوامر الموجود على الجهاز الذي نعمل عليه كما هو موضح في الفيديو التالي:
+  تعتمد هذه الطريقة على كتابة التعليمات او الكود البرمجي في ملف نصي ينتهي اسمه بالاحقة py. ومن ثم يتم تشغيل هذا الملف من قبل مفسر بايثون ليقوم بقراءته وتنفيذ التعليمات الموجدة به. وتعتمد طريقة تشغيل هذا الملف بحسب نوع محرر النصوص المستخدم في تحرير و كتابة الكود البرمجي داخل الملف. فهناك محررات بسيطة مثل notepad في نظام ويندوز و gedit في نظام ماك ولينكس حيث تقتصر وظيفة هذه المحررات على كتابة الكود البرمجي داخل الملف فقط. اما عملية تشغيل الملف فتتم من خلال محرر الاوامر الموجود على الجهاز الذي نعمل عليه كما هو موضح في الفيديو التالي:
   <br>
-  أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسية. يطلق على هذه المحررات المتقدمة "بيئة تطوير البرامج المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي بلغة بايثون. 
+  أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسيطة. يطلق على هذه المحررات المتقدمة "بيئة التطوير المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي بلغة بايثون. 
 </p>
-<h2>الطريقة الشبه تفاعلية</h2>
+<h2> ثالثاً: الطريقة الشبه تفاعلية</h2>
 <p>
   تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم كتابة الكود البرمجي في ملف ينتهي باللاحقة ipynb. مقسم الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
 </p>
@@ -211,12 +219,15 @@
 <p>
 بعد أن تعلمنا كيف نتخاطب مع مفسر بايثون بثلاث طرق مختلفة سوف نكمل هنا ما تعلمته في التمارين الاستكشافية حول عملية إجراء العمليات الحسابية. فبايثون يمكن ان يعمل كآلة حاسبة ولكنه يستخدم رموزاً مختلفة قليلاً عن تلك الموجودة في الآلة الحاسبة.  
 <br>
+ملاحظة: اضغط على زر التشغيل الأخضر في اقصى اليمين لإطهار ناتج العملية الحسابية. خذ فرصتك في الاستكشاف وتغيير الارقام المستخدمة في العملية الحسابية.
+<br>
 اولاً: تسخدم العلامة "+" لاجراء عمليات الجمع
 <br>
 مثال:
 </p>
 <div class="my-repl">
 <py-repl>5+4</py-repl>
+
 </div>
 <p>
   ثانياً: تسخدم علامة "-" (الشرطة الاعتيادية وليست السفلية) لاجراء عمليات الطرح
@@ -289,7 +300,31 @@
   </div>
 <h2>المتغيرات</h2>
 <p>
-  المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
+  المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك للأسباب التلية:
+  <ol>
+  <li>تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. فمثلا بدلا من استخدام ثابت الدائرة ط في كل مرة احتاج الي استخدامه في عملية حسابية يمكن ان اسند قيمة هذا الثابت الي المتغير pi ومن ثم استخدام الحرفين pi للدلالة على قيمة الثابت في العملية الحسابية كما في المثال التالي:
+    <div class="my-repl">
+      <py-repl>
+        pi=3.14159
+        pi*2
+      </py-repl>
+    </div>
+    في المثال السابق مجرد كتابة pi في اي عملية حسابية راح يقوم بايثون بتعويض القيمة 3.14159 المسندة للمتغير pi في العملية الحسابية. هل لاحظت مقدار  السهولة في استخدام المتغير لهذه الجزئية سواءً كان على مستوى المجهود المستخدم في الكتابة او على مستوى سهولة التذكر. يجب ملاحظة ان عملية اسناد قيمة الى متغير تتم من خلال اختيار اسم مناسب للمتغير ومن ثم وضع علامة يساوي  بعد الاسم واخيار كتابة القيمة المراد اسنادها للمتغير كما هو موضح في المثال السابق.
+  </li>
+  <li>التعامل مع البيانات المختلفة: تسهل المتغيرات التعامل مع البيانات المختلفة مثل الأرقام، النصوص، القوائم، وغيرها، مما يجعل البرمجة أسهل وأكثر مرونة. كما هو موضح في المثال التالي:
+    <div class="my-repl">
+      <py-repl>
+        name="I am Al. "
+        hobby="I like to play football" 
+        name+hobby
+      </py-repl>
+    </div>
+    اذا لم تستطع فهم الكود السابق فلا تقلق. كل ما عليك ادراكه الآن هو المتغيرات تستطيع الاحتفاظ ببيانات مختلفة. وسوف نتطرق الى الكيفية التي يتعامل بها بايثون مع البيانات النصية في فصول لاحقة ان شاء الله. 
+  </li>
+  <li></li>
+  <li></li>
+</ol>
+  تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
 </p>
 <div class="my-repl">
 <py-repl>
