--- a/site/pages/python-in-brief.html
+++ b/site/pages/python-in-brief.html
@@ -157,7 +157,7 @@
         </ol>
         <p>
           معظم هذه التوزيعات تلاشى ولم يبقى الا التوزيعة الاكثر شهرة وهي توزيعة ِAanconda. يمكن تحميل هذه التوزيعة من
-          <a href="http://www.continuum.io">www.continuum.io</a>
+          <a href="https://www.anaconda.com/download/success">www.continuum.io</a>
            ويمكن تنصيب هذه التوزيعة على ويندوز وماك ولينكس. تحتوي التوزيعة على اكثر من 100 مكتبة و مدير ادارة مكتبات يدعى conda. كما يوجد لهذه التوزيعة اصدارة مصغرة تدعى miniconda واصدارات تجارية اخرى.
         </p>
       </div>
